Add version with font-size 11

--- a/willpower/chapter12.tex
+++ b/willpower/chapter12.tex
@@ -388,7 +388,7 @@
 
 Акрамя кішачніка, прабіётыкі могуць быць карысныя і для аднаўленьня і іншай мікрафлёры. Напрыклад, аральны прабіётык Streptococcus Salivarius штамы K12 (больш горла) і M18 (больш зубы), які зьніжае рызыку карыесу, танзілітаў ды іншых інфэкцыяў, пазбаўляе і ад непрыемнага паху з~рота і ўтварэньня камянёў. Lactobacillus sakei дапамагаюць аднавіць мікрафлёру насавых пазухаў, эфэктыўныя пры сінусіце. Ёсьць і прабіётыкі для скуры, напрыклад Streptococcus thermophiles у~выглядзе крэму павялічвае вытворчасьць ахоўных цэрамідаў, якія паляпшаюць бар'ерную функцыю скуры і маюць супрацьмікробныя ўласьцівасьці. Аднавіць мікрафлёру похвы і зьнізіць рызыку інфэкцыяў могуць штамы Lactobacillus crispatus CTV05, L. jensenii, ATCC 9857, L. gasseri, L. Iners, L. casei rhamnosus, L. acidophilus.
 
-\emph{Якія прабіётыкі абраць? На ўпакоўцы звычайна пералічваюцца штамы, вось гэты сьпіс дапаможа вам абраць самыя эфэктыўныя. Лактабактэрыі: ужо апісаная Lactobacillus reuteri, Lactobacillus paracasei B 21060, L. rhamnosus GG, Lactobacillus casei DN114, Lactobacillus delbrueckii, L. plantarum W62, L. salivarius, Lactobacillus acido 052. Біфідабактэрыі: Bifidobacterium bifidum W23, B. lactis W18, B. longum W51, Bifidobacterium infantis, Bifidobacterium breve, Bifidobacterium animalis lactis. Энтэракокі: Enterococcus faecium W54. Бацылы: Bacillus clausii, Bacillus subtilis, Bacillus mesentericus. Стрэптакокі: Streptococcus faecalis, Streptococcus salivarius subsp. Thermophilius. Іншыя штамы: Pediococcus acidilactici CECT 7483, Clostridium butyricum і Escherichia coli DSM17252, E. coli Nissle 1917, Roseburia, Akkermansia Faecalibacterium prausnitzii. Грыбы Saccharomyces boulardii (сахараміцэтэты Булардзі) выкарыстоўваюцца пры лячэньні дыярэі і шэрагу іншых станаў.}
+\emph{Якія прабіётыкі абраць? На ўпакоўцы звычайна пералічваюцца штамы, вось гэты сьпіс дапаможа вам абраць самыя эфэктыўныя. Лактабактэрыі: ужо апісаная Lactobacillus reuteri, Lactobacillus paracasei B 21060, L. rhamnosus GG, Lactobacillus casei DN114, Lactobacillus delbrueckii, L. plantarum W62, L. salivarius, Lactobacillus acido 052. Біфідабактэрыі: Bifidobacterium bifidum W23, B. lactis W18, B. longum W51, Bifidobacterium infantis, Bifidobacterium breve, Bifidobacterium animalis lactis. Энтэракокі: Enterococcus faecium W54. Бацылы: Bacillus clausii, Bacillus subtilis, Bacillus mesentericus. Стрэптакокі: Streptococcus faecalis, Streptococcus salivarius subsp. Thermophilius. Іншыя штамы: Pediococcus acidilactici CECT 7483, Clostridium butyricum і Escherichia coli DSM17252, E. coli Nissle 1917, Roseburia, Akkermansia Faecalibacterium prausnitzii. Грыбы Sac\-cha\-ro\-my\-ces boulardii (сахараміцэтэты Булардзі) выкарыстоўваюцца пры лячэньні дыярэі і шэрагу іншых станаў.}
 
 Хоць усе гэтыя штамы карысныя, эфэктыўнасьць іх паасобку не вялікая. Бо ў~кішачніку яны ўключаны ў~супольнасьці, дзе шчыльна ўзаемадзейнічаюць. Уявіце сабе завод па зборцы аўтамабіляў, дзе кожны працоўны робіць адну апэрацыю. Ці зможа замена аднаго працоўнага прыкметна павялічыць якасьць машынаў? Наўрад ці, важна зьмяняць усю сыстэму.
 
