--- a/willpower/chapter13.tex
+++ b/willpower/chapter13.tex
@@ -64,7 +64,7 @@
 
 Многія дасьледчыкі ўпэўненыя, што залежнасьць ад смартфона можна паставіць у~адзін шэраг з~такімі нехімічнымі залежнасьцямі, як шопінг, гемблінг і да т.~п. Рызыка стаць залежным вышэй у~тых людзей, у~каго ўжо ёсьць існыя залежнасьці і схільнасьць да імпульсіўных паводзінаў.
 
-\textbf{Звычайна залежнасьць праяўляецца ў~немагчымасьці засяродзіцца і сындроме адмены, калі чалавек без тэлефона становіцца раздражнёным і адчувае сябе вельмі дыскамфортна. Да 70\,\% амерыканцаў ня могуць заснуць без свайго тэлефона.} 
+\textbf{Звычайна залежнасьць праяўляецца ў~не\-маг\-чы\-масьці засяродзіцца і сындроме адмены, калі чалавек без тэлефона становіцца раздражнёным і адчувае сябе вельмі дыскамфортна. Да 70\,\% амерыканцаў ня могуць заснуць без свайго тэлефона.} 
 
 Людзі імкнуцца ня толькі лёгка атрымаць задавальненьне, але й лёгка пазбавіцца непрыемных пачуцьцяў без намаганьняў. Таму мы даём нырца ў~тэлефон, замест таго каб разабрацца, чаму нам кепска.
 
@@ -448,7 +448,7 @@
 \textbf{Прыкметамі кіберхондрыі зьяўляюцца:} 
 \begin{itemize}
   \item занадта частае выкарыстаньне інтэрнэту для пошуку інфармацыі аб сваіх праблемах;
-  \item захапленьне анляйн-абсьледаваньнямі;
+  \item захапленьне анляйн-аб\-сьле\-да\-вань\-ня\-мі;
   \item частая зьмена лекараў;
   \item упэўненасьць у~тым, што ў~здаровага ня можа быць ніякіх прыкметаў захворваньняў;
   \item чытаньне спэцыялізаваных мэдыцынскіх сайтаў;
