--- a/willpower/chapter2.tex
+++ b/willpower/chapter2.tex
@@ -463,7 +463,7 @@
 
 Калі моцная траўма ці інфэкцыя дае гострае запаленьне, якое, як полымя, загараецца і хутка згасае, то хранічнае запаленьне~--- гэта тленьне вугольля. У сучасным ладзе жыцьця зьявілася шмат прычынаў хранічнага запаленьня. Узмацняе запаленьне нездаровае харчаваньне (ежа позна ўвечары, высокаглікемічныя вугляводы, перапрацаваная ежа, смажанае, вэнджанае, таксіны і да т.~п.), недасып, недахоп або залішняя фізычная актыўнасьць, нізкая разнастайнасьць мікрафлёры, шкоднае асяродзьдзе (бруднае паветра, шум г.~д.), стрэс, адзінота і адсутнасьць падтрымкі.
 
-\emph{\textbf{Узровень С-рэактыўнага бялку} ў~паляўнічых-зьбіральнікаў ніжэйшы, чым у~жыхароў разьвітых краінаў. Дасьледаваньні на Філіпінах і ў~Эквадоры паказваюць, што ўзровень С-рэактыўнага бялку прыкметна ніжэйшы, а~ўзровень супрацьзапаленчага ІЛ-10 вышэйшы, чым у~заходніх краінах, незалежна ад ІМЦ.}
+\emph{\textbf{Узровень С-рэактыўнага бялку} ў~па\-ляў\-ні\-чых-зьбіральнікаў ніжэйшы, чым у~жыхароў разьвітых краінаў. Дасьледаваньні на Філіпінах і ў~Эквадоры паказваюць, што ўзровень С-рэактыўнага бялку прыкметна ніжэйшы, а~ўзровень супрацьзапаленчага ІЛ-10 вышэйшы, чым у~заходніх краінах, незалежна ад ІМЦ.}
 
 Чым меншая антыгенная нагрузка ў~дзяцінстве, тым вышэйшы ўзровень СРБ у~дарослых. Праблема сучаснага стэрыльнага сьвету заключаецца ў~тым, што зьніжэньне колькасьці вонкавых інфэкцыяў і зьніжэньне ўнутранай разнастайнасьці мікрафлёры вядзе да ўзмацненьня празапаленчай рэакцыі. Уплываць на ўзровень запаленьня могуць самыя розныя аспэкты жыцьця, ад хранічных інфэкцыяў да псыхалягічнага стрэсу. Запаленьне ня толькі паскарае старэньне, але й павялічвае рызыку мноства захворваньняў як на лякальным узроўні (напрыклад, гастрыт, выкліканы хелікабактэрам у~страўніку, павялічвае рызыку раку страўніка), так і на сыстэмным узроўні (рызыка сардэчна-сасудзістых захворваньняў, нэўрадэгенэратыўных і псыхічных захворваньняў), закранае самыя розныя сыстэмы органаў, напрыклад можа выклікаць анэмію пры нармальным спажываньні жалеза.
 
